--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 								<i class="fa fa-linkedin"></i>
 							</div>
 						</a>
-						<a href="https://www.freecodecamp.org/karteekm" title="" target="_blank">
+						<a href="https://www.freecodecamp.org/portfolio/karteekm" title="" target="_blank">
 							<div class="item">
 								<i class="fa fa-free-code-camp"></i>
 							</div>
