--- a/MyCV_temp.html
+++ b/MyCV_temp.html
@@ -49,7 +49,7 @@ overflow-y:auto;
 								<i class="fa fa-facebook"></i>
 							</div>
 						</a>
-						<a href="https://www.freecodecamp.org/karteekm" title="" target="_blank">
+						<a href="https://www.freecodecamp.org/portfolio/karteekm" title="" target="_blank">
 						<div class="item">
 						<i class="fab fa-free-code-camp"></i>
 						</div>
