--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 					<!-- Single Service Starts -->
 					<div class="col-md-6 col-sm-6 service animated" data-animation="fadeInLeft" data-animation-delay="700">
-						<span class="service-icon center"><i class="fa fa-android fa-4x"></i>
+						<span class="service-icon center"><i class="fa fa-html5 fa-4x"></i>
 						</span>
 						<div class="service-desc">
 							<h4 class="service-title color-scheme">Frontend</h4>
