--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
 								<i class="fa fa-twitter"></i>
 							</div>
 						</a>
+						<a href="https://dev.to/karteekm"  target="_blank">
+							<div class="item">
+								<i class="fab fa-dev" title="karteekm's DEV Profile"></i>
+							</div>
+						</a>
 
 					</div>
 				</div>
